Внесён первый пакет правок